# VkRenderer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
assets/models/: microphone.gltf
assets/shaders/: cull.comp  light_cull.comp  pbr.frag  pbr.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  unlit.frag  unlit.vert  wireframe.frag  wireframe.vert
shaders/: triangle.frag  triangle.vert
src/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  input.cpp  input.hpp  logger.hpp  main.cpp  window.cpp  window.hpp
src/backends/vulkan/: CMakeLists.txt  vulkan_allocator.cpp  vulkan_allocator.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command.cpp  vulkan_command.hpp  vulkan_context.cpp  (+19 more)
src/camera/: CMakeLists.txt  camera_controller.cpp  camera_controller.hpp  fps_camera_controller.cpp  fps_camera_controller.hpp
src/ecs/: components.hpp
src/event/: CMakeLists.txt  event_manager.cpp  event_manager.hpp
src/gpu/: CMakeLists.txt  allocator.cpp  allocator.hpp  asset_loader.cpp  asset_loader.hpp  buffer.cpp  buffer.hpp  command_system.cpp  command_system.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  frame_manager.cpp  frame_manager.hpp  global_shader_data.cpp  global_shader_data.hpp  instance.cpp  instance.hpp  material.hpp  material_palette.cpp  material_palette.hpp  mesh.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
src/input/: CMakeLists.txt  input_system.cpp  input_system.hpp  scan_codes.hpp
src/platform/: CMakeLists.txt  sdl_platform.cpp  sdl_platform.hpp
src/renderer/: CMakeLists.txt  bindless_materials.cpp  bindless_materials.hpp  cube_mesh.hpp  forward_plus.cpp  forward_plus.hpp  gpu_culling.cpp  gpu_culling.hpp  material_manager.cpp  material_manager.hpp  pipeline_manager.cpp  pipeline_manager.hpp  render_context.cpp  render_context.hpp  render_system.cpp  render_system.hpp  skybox_ibl.cpp  skybox_ibl.hpp
src/rendering/: CMakeLists.txt  renderer.cpp  renderer.hpp  rendering_system.cpp  rendering_system.hpp
src/resource/: CMakeLists.txt  model_loader.cpp  model_loader.hpp  resource_manager.cpp  resource_manager.hpp  scene_loader.cpp  scene_loader.hpp  types.hpp
src/rhi/: CMakeLists.txt  backend.cpp  backend.hpp  buffer.hpp  command.hpp  descriptor.hpp  device.hpp  factory.hpp  pipeline.hpp  queue.hpp  rhi.hpp  sampler.hpp  shader.hpp  shader_utils.hpp  swapchain.hpp  sync.hpp  texture.hpp  types.hpp
src/vulkan/: CMakeLists.txt  allocator.cpp  allocator.hpp  asset_loader.cpp  asset_loader.hpp  buffer.cpp  buffer.hpp  command_system.cpp  command_system.hpp  context.cpp  context.hpp  descriptors.cpp  descriptors.hpp  frame_data.hpp  frame_manager.cpp  frame_manager.hpp  global_shader_data.cpp  global_shader_data.hpp  material.hpp  material_palette.cpp  material_palette.hpp  mesh.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
(+5 files in other folders)
